# Commai_frontend_main_pre

./: .gitignore  frontend-dotgit-backup.tgz
.github/workflows/: frontend.yml  ui-policy.yml
backend/: ENV.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: chat.py
backend/app/clients/config/: models.json
backend/app/clients/llm_gateway/: __init__.py  main.py
backend/app/clients/llm_gateway/api/: __init__.py
backend/app/clients/llm_gateway/api/routers/: chat.py
backend/app/clients/llm_gateway/core/: config.py  errors.py  provider_base.py  registry.py  schemas.py  types.py
backend/app/clients/llm_gateway/providers/anthropic/: __init__.py  client.py
backend/app/clients/llm_gateway/providers/gemini/: __init__.py  client.py
backend/app/clients/llm_gateway/providers/mock/: client.py
backend/app/clients/llm_gateway/providers/openai/: __init__.py  client.py
backend/app/clients/llm_gateway/services/: chat_service.py
backend/app/config/: MODELS.example.json  models.json
backend/app/services/: llm_chat_service.py
backend/commai_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Strict_coding_principles.md  ideal-directory.md  main.md
docs/api/: openapi.yaml
docs/repo-business-overview/: 01_Requirements_Spec_v1.0.md  02_Amazon_FullScope_Developer_Guide_v1.0.md  03_Tech_Decision_Record_FE.md  README.md
docs/sections v2/: README.md  data_comm_auth.md  (+14 more)
frontend/: .eslintignore  .stylelintrc.json  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  stylelint.config.cjs  tailwind.config.mjs  tsconfig.json
(+260 files in other folders)
